tests/NormalTests/paczka1/fuzzy1/77315273.err
Error in line 2: A125 S801 60,6
Error in line 15: 44BxKwv A824 88,0
Error in line 18: 44BxKwv S801 20,6
Error in line 19: hTWW A824 47,6
Error in line 20: CnRd2TbqC A995 50,5
Error in line 27: CnRd2TbqC A824 40,5
Error in line 36: 44BxKwv S801 27,9
